--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "gofood-helsinki",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://open-api.myhelsinki.fi/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "cors": "^2.8.5",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
